--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ serde_yaml = "0.9.34"
 slint = "1.9.1"
 slint-interpreter = "1.9.1"
 
+[build-dependencies]
+slint-build = "1.9.1"
+
 [package.metadata.bundle]
 name = "Aetheria"
 version = "0.1.0"
