added env_logger and log to dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+env_logger = "0.11.6"
 futures = "0.3.31"
+log = "0.4.22"
 nalgebra = "0.33.2"
 rdev = "0.5.3"
 serde_yaml = "0.9.34"
